fixed photography layout issues

--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -8,8 +8,7 @@ body {
 
 .jumbotron,
 .about-me-wrapper,
-.projects-wrapper,
-.photography-wrapper {
+.projects-wrapper {
 	min-height: 100vh;
 	padding: 10rem 0;
 }
@@ -109,9 +108,24 @@ body {
 	background-color: rgba(255,255,255,0.7);
 }
 
+.photography-wrapper {
+	padding: 2.5rem 0;
+	min-height: 100vh;
+}
+
+
+.carousel {
+	margin: 0 auto;
+	width: 60%;
+}
+
 @media (max-width: 575.98px) {
 	.about-me-thumbnail img {
 		text-align: center;
 	}
+	.carousel {
+	margin: 0 auto;
+	width: 100%;
+}
 }
 
